# docker-logger

./: .gitignore  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml  tasks.py
captain-hooks/: __tinkerbell__.sh  backup_files.sh  restore_files.sh
tests/: test_default.py  test_system.py
web2py/: Dockerfile  requirements.txt
web2py/app/controllers/: default.py
web2py/app/models/: db.py  docker_logger_model.py
web2py/app/views/default/: index.html  logs.html  realtime_logs.html
